<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_home"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acv.olimpiadas.HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/home_title"
        android:id="@+id/home_title"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/home_name"
        />

    <TextView
        android:text="@string/home_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_name"
        android:layout_marginTop="42dp"
        android:id="@+id/home_age" />

    <TextView
        android:text="@string/home_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_age"
        android:layout_marginTop="28dp"
        android:id="@+id/home_type" />

    <TextView
        android:text="@string/home_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_type"
        android:layout_marginTop="42dp"
        android:id="@+id/home_period" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignTop="@+id/home_name"
        android:layout_toEndOf="@+id/home_type"
        android:layout_marginStart="20dp"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignTop="@+id/home_age"
        android:layout_alignStart="@+id/editText"
        android:id="@+id/editText2" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignTop="@+id/home_period"
        android:layout_toEndOf="@+id/home_type"
        android:id="@+id/radioButtonSelected">

        <RadioButton android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_radio_morning"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_radio_afternoon"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_radio_night"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        />

    <Button
        android:text="@string/home_btn_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_btn_reserve"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reserveDialog"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rio2016"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/home_title"
        android:id="@+id/imageView" />

</RelativeLayout>
